Issue 1299 Show the project id
Added the project id to the Project Description page. I tried adding it to the home page but it didn't fit in and would have required bigger changes to the page.

--- a/website/src/app/index.scss
+++ b/website/src/app/index.scss
@@ -378,6 +378,10 @@ a.project-sidenav-tool:visited {
   padding: 8px;
 }
 
+.margin-left-0 {
+    margin-left: 0px;
+}
+
 .margin-left-55 {
   margin-left: 55px;
 }
